[gd_scene load_steps=16 format=2]

[ext_resource path="res://Resources/UI Elements/Window/window_pause.png" type="Texture" id=1]
[ext_resource path="res://Resources/Fonts/cloudy_dialog_game_over_heading.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/PlayScene/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://Resources/UI Elements/Buttons/Clicked/play_green.png" type="Texture" id=4]
[ext_resource path="res://Resources/UI Elements/Buttons/BeforeClick/play_green.png" type="Texture" id=5]
[ext_resource path="res://Resources/UI Elements/Window/button_text_background.png" type="Texture" id=6]
[ext_resource path="res://Resources/UI Elements/Buttons/BeforeClick/level_blue.png" type="Texture" id=7]
[ext_resource path="res://Resources/UI Elements/Buttons/Clicked/restart_orange.png" type="Texture" id=8]
[ext_resource path="res://Resources/UI Elements/Buttons/BeforeClick/sound_on_yellow.png" type="Texture" id=9]
[ext_resource path="res://Resources/Fonts/cloudy_dialog_heading.tres" type="DynamicFont" id=10]
[ext_resource path="res://Resources/UI Elements/Buttons/Clicked/level_blue.png" type="Texture" id=11]
[ext_resource path="res://Resources/UI Elements/Buttons/BeforeClick/restart_orange.png" type="Texture" id=12]
[ext_resource path="res://Resources/UI Elements/Buttons/Clicked/sound_on_yellow.png" type="Texture" id=13]
[ext_resource path="res://Resources/UI Elements/Buttons/BeforeClick/music_on_yellow.png" type="Texture" id=14]
[ext_resource path="res://Resources/UI Elements/Buttons/Clicked/music_on_yellow.png" type="Texture" id=15]

[node name="Node2D" type="Node2D"]
position = Vector2( 7, 53 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 6

[node name="MenuPopup" type="Control" parent="CanvasLayer"]
pause_mode = 2
visible = false
anchor_left = 0.506836
anchor_top = 0.588333
anchor_right = 0.506836
anchor_bottom = 0.588333
margin_left = -39.0
margin_top = -79.0
margin_right = 1.0
margin_bottom = -39.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="TextureRect" parent="CanvasLayer/MenuPopup"]
margin_left = -207.164
margin_top = -182.78
margin_right = 1130.84
margin_bottom = 997.22
rect_scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/MenuPopup"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.5688
margin_top = -212.296
margin_right = 73.4312
margin_bottom = -172.296
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 3
text = "Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="TextureButton" parent="CanvasLayer/MenuPopup"]
margin_left = -66.8854
margin_top = -104.174
margin_right = 533.115
margin_bottom = 55.8263
rect_scale = Vector2( 0.35, 0.3 )
texture_normal = ExtResource( 6 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeLabel" type="Label" parent="CanvasLayer/MenuPopup"]
margin_left = -18.0
margin_top = -96.0
margin_right = 108.0
margin_bottom = -52.0
custom_fonts/font = ExtResource( 10 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="TextureButton" parent="CanvasLayer/MenuPopup"]
margin_left = -67.1311
margin_top = 47.8931
margin_right = 532.869
margin_bottom = 207.893
rect_scale = Vector2( 0.31, 0.3 )
texture_normal = ExtResource( 6 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="CanvasLayer/MenuPopup"]
margin_left = -16.1225
margin_top = 56.3674
margin_right = 85.878
margin_bottom = 87.3674
custom_fonts/font = ExtResource( 10 )
text = "Levels"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartLevel" type="TextureButton" parent="CanvasLayer/MenuPopup"]
margin_left = -62.5688
margin_top = -28.1912
margin_right = 537.431
margin_bottom = 129.809
rect_scale = Vector2( 0.32, 0.3 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestarLevelLabel" type="Label" parent="CanvasLayer/MenuPopup"]
margin_left = -17.707
margin_top = -19.6846
margin_right = 176.293
margin_bottom = 24.3154
custom_fonts/font = ExtResource( 10 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" type="TextureButton" parent="CanvasLayer/MenuPopup"]
margin_left = -47.8854
margin_top = 131.0
margin_right = 130.115
margin_bottom = 311.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButton" type="TextureButton" parent="CanvasLayer/MenuPopup"]
margin_left = 40.0
margin_top = 131.0
margin_right = 218.0
margin_bottom = 311.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 13 )

[node name="play_green" type="TextureButton" parent="CanvasLayer/MenuPopup"]
margin_left = -94.0
margin_top = -112.0
margin_right = 870.0
margin_bottom = 156.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="replay_green" type="TextureButton" parent="CanvasLayer/MenuPopup"]
margin_left = -93.0
margin_top = -35.0
margin_right = 559.0
margin_bottom = 145.0
rect_scale = Vector2( 0.35, 0.35 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_green" type="TextureButton" parent="CanvasLayer/MenuPopup"]
margin_left = -91.0
margin_top = 42.0
margin_right = 516.0
margin_bottom = 222.0
rect_scale = Vector2( 0.35, 0.35 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 5

[node name="BackgroundTint" type="ColorRect" parent="CanvasLayer2"]
visible = false
show_behind_parent = true
margin_left = -1459.0
margin_top = -23.0
margin_right = 8417.0
margin_bottom = 2036.0
color = Color( 0, 0, 0, 0.678431 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="CanvasLayer/MenuPopup/Resume" to="CanvasLayer/MenuPopup" method="_on_Resume_button_up"]
[connection signal="button_up" from="CanvasLayer/MenuPopup/Home" to="CanvasLayer/MenuPopup" method="_on_Home_button_up"]
[connection signal="button_up" from="CanvasLayer/MenuPopup/RestartLevel" to="CanvasLayer/MenuPopup" method="_on_RestartLevel_button_up"]
[connection signal="button_up" from="CanvasLayer/MenuPopup/MusicButton" to="CanvasLayer/MenuPopup" method="_on_MusicButton_button_up"]
[connection signal="button_up" from="CanvasLayer/MenuPopup/SoundButton" to="CanvasLayer/MenuPopup" method="_on_SoundButton_button_up"]
[connection signal="button_up" from="CanvasLayer/MenuPopup/play_green" to="CanvasLayer/MenuPopup" method="_on_play_green_button_up"]
[connection signal="button_up" from="CanvasLayer/MenuPopup/replay_green" to="CanvasLayer/MenuPopup" method="_on_replay_green_button_up"]
[connection signal="button_up" from="CanvasLayer/MenuPopup/menu_green" to="CanvasLayer/MenuPopup" method="_on_menu_green_button_up"]
